Feat: Moved election to elections.
- Changed the API point of election to be more "rest-like".
- Updated Swagger to follow the new endpoints
- Updated tests to follow the new endpoints
