# app/Http/Controllers/InviteController.php
@@ -20,7 +20,7 @@ class InviteController extends Controller
      *
      * @SWG\Get(
      *     tags={"Invites"},
-     *     path="/election/{electionId}/invite",
+     *     path="/elections/{electionId}/invite",
      *     summary="View electors who have not accepted their invite yet",
      *     operationId="inviteIndex",
      *     @SWG\Parameter(
@@ -51,7 +51,7 @@ class InviteController extends Controller
      *
      * @SWG\Post(
      *     tags={"Invites"},
-     *     path="/election/{electionId}/invite",
+     *     path="/elections/{electionId}/invite",
      *     summary="Send an invite",
      *     operationId="createInvite",
      *     consumes={"application/json"},
